[package]
name = "estilla-stats-discord-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = "0.11"
serde = "1.0"

[dependencies.tokio]
version = "1.6"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10"
features = ["model", "client", "rustls_backend", "gateway", "unstable_discord_api"]
default-features = false
